editing price h1 color

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -11,9 +11,9 @@
   <div class="card">
     <div class="product-img"></div>
     <div class="card-content">
-      <h4 class="dark-gray">Perfume</h4>
+      <h4>Perfume</h4>
       <h1>Gabrielle Essence Eau De Parfum</h1>
-      <p class="dark-gray">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
       <div class="price">
         <h1>$149.99</h1>
