--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -19,7 +19,7 @@
 
     <div class="card">
       <img alt="suvs" srcset="images/icon-suvs.svg">
-      <h1>Sedans</h1>
+      <h1>suvs</h1>
       <p>  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
         <div class="btn">Learn More</div>
@@ -27,7 +27,7 @@
 
     <div class="card">
       <img alt="luxury" srcset="images/icon-luxury.svg">
-      <h1>Sedans</h1>
+      <h1>luxury</h1>
       <p>  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
         <div class="btn">Learn More</div>
